--- a/gradle.properties
+++ b/gradle.properties
@@ -1,13 +1,13 @@
 # IntelliJ Platform Artifacts Repositories -> https://plugins.jetbrains.com/docs/intellij/intellij-artifacts.html
 
-pluginGroup = com.github.el7cosmos.drupalidea
-pluginName = drupal-idea
+pluginGroup = me.elabee.idea.drupal
+pluginName = Drupal Idea
 pluginRepositoryUrl = https://github.com/el7cosmos/drupal-idea
 # SemVer format -> https://semver.org
 pluginVersion = 0.0.1
 
 # Supported build number ranges and IntelliJ Platform versions -> https://plugins.jetbrains.com/docs/intellij/build-number-ranges.html
-pluginSinceBuild = 252
+pluginSinceBuild = 233
 
 # IntelliJ Platform Properties -> https://plugins.jetbrains.com/docs/intellij/tools-gradle-intellij-plugin.html#configuration-intellij-extension
 platformVersion = 2025.2.5
