Change plugin name

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 # IntelliJ Platform Artifacts Repositories -> https://plugins.jetbrains.com/docs/intellij/intellij-artifacts.html
 
 pluginGroup = me.elabee.idea.drupal
-pluginName = Drupal Idea
+pluginName = Drupal Toolkit
 pluginRepositoryUrl = https://github.com/el7cosmos/drupal-idea
 # SemVer format -> https://semver.org
 pluginVersion = 0.0.1
