--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -1,7 +1,7 @@
 <!-- Plugin Configuration File. Read more: https://plugins.jetbrains.com/docs/intellij/plugin-configuration-file.html -->
 <idea-plugin>
     <id>me.elabee.idea.drupal</id>
-    <name>Drupal Idea</name>
+    <name>Drupal Toolkit</name>
     <vendor>el7cosmos</vendor>
 
     <depends>com.intellij.modules.platform</depends>
