Template twig namespace (#18)
* Index drupal extensions

* Add TwigNamespaceExtension implementation

* Update readme and changelog

* Bump plugin version

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -12,6 +12,7 @@
     <resource-bundle>messages.DrupalToolkitBundle</resource-bundle>
 
     <extensions defaultExtensionNs="com.intellij">
+        <fileBasedIndex implementation="me.elabee.idea.drupal.core.extension.DrupalExtensionIndex"/>
         <fileBasedIndex implementation="me.elabee.idea.drupal.theme.DrupalComponentIndex"/>
         <psi.referenceContributor language="PHP" implementation="me.elabee.idea.drupal.DrupalReferenceContributor"/>
         <localInspection language="PHP"
